--- a/index.html
+++ b/index.html
@@ -176,18 +176,37 @@
       <p class="content has-text-justified">
         To enable flexible task specifications, we introduce key extensions that improve the expressiveness and adaptability of the correspondence-oriented specification. While prior work assume fixed keypoint counts and dense time steps, our formulation removes those rigid assumptions and enables:
       </p>
-      <ul class="content has-text-justified">
+      <ul>
         <li><b>Spatial Flexibility</b>: Any K >= 1 keypoints can be selected for the task representation c to exert constraints of varying DoFs based on the task requirement. Moreover, the keypoints can be selected on multiple objects, either static or dynamic, allowing specifications of multistage tasks as well as constraints for objects that should stay still.</li>
         <li><b>Temporal Flexibility</b>: The target time steps are not restricted to fixed-length or evenly spaced intervals. We have H >= 2 target coordinates for each of the K keypoints, allowing users to provide any specifications from sparse start-goal pairs to dense flows. Instead of rigidly reaching the H target coordinates at H predetermined timesteps, we require only that the targets be reached in order, leaving execution speed and recovery behavior free to adapt online.
       </ul>
     </div>
-
   </div>
 
-  </br>
-  </br>
+  <div class="my-block">
+    <div class="column is-full-width">
+      <h2 class="title is-3">Correspondence-Oriented Imitation Learning (COIL)</h2>
+      <p class="content has-text-justified">
+        With the spatial correspondence task representation, COIL learns a conditional policy that executes manipulation tasks in a self-supervised manner.
+        We first collect training data by performing exploration actions in simulation and labeling the trajectory with the achieved scene 3D flows in hindsight as the spatial correspondence representation. The training data is further augmented during the training process by randomly sub-sampling keypoints and time steps to allow the policy to learn to generalize to different task specifications, and to learn to recover from failures. 
+      </p>
+      <div class="columns is-vcentered is-centered">
+        <img src="images/main_figure.jpg"
+                  class="interpolation-image"
+                  alt="COIL Architecture Image."
+                  width="100%"
+                  />
+      </div>
+      <p class="content has-text-justified">
+        COIL introduces the <b>Spatio-temporal Transformer</b> architecture to effectively ground sparse spatial correspondence representations into visual observations and robot actions, which interleaves self-attention layers in both spatial and temporal dimensions with cross-attention layers that fuse information from the pointcloud observations.
+      </p>
+    </div>
+  </div>
 
 </section>
+
+</br>
+</br>
 
 <footer class="footer">
   <div class="container">
