Add more explanation

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <div class="rows is-fullhd">
       <h2 class="title is-3">Additional Tasks</h2>
       <p class="content has-text-justified">
-        We further demonstrate the flexibility of COIL by performing tasks with both sparse and dense specifications.
+        We further demonstrate the flexibility of COIL by performing tasks with both sparse and dense specifications on a pick-place-avoidance task and a wiping task.
       </p>
       
       <div class="rows">
